Se creó con Colab

--- a/Copia_de_05_CLIP_IA_ESIS_2024.ipynb
+++ b/Copia_de_05_CLIP_IA_ESIS_2024.ipynb
@@ -2623,7 +2623,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 39,
       "metadata": {
         "id": "pKJZZBh73I-y"
       },
@@ -2655,7 +2655,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 40,
       "metadata": {
         "id": "r1xl67E53I-5"
       },
@@ -2690,7 +2690,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 41,
       "metadata": {
         "id": "xMydxEGy3I--"
       },
@@ -2730,7 +2730,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 42,
       "metadata": {
         "id": "_IbU1Ghp3I-_"
       },
@@ -2751,11 +2751,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 43,
       "metadata": {
-        "id": "JdJg3Y2p3I-_"
+        "id": "JdJg3Y2p3I-_",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e2ecf77c-69da-4a70-c34d-c47c36a0ac9d"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Num params:  44900355\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/lib/python3.10/multiprocessing/popen_fork.py:66: RuntimeWarning: os.fork() was called. os.fork() is incompatible with multithreaded code, and JAX is multithreaded, so this will likely lead to a deadlock.\n",
+            "  self.pid = os.fork()\n"
+          ]
+        }
+      ],
       "source": [
         "T = 400\n",
         "B_start = 0.0001\n",
@@ -2781,7 +2801,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 44,
       "metadata": {
         "id": "4UR8KUrm3I_A"
       },
@@ -2803,7 +2823,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 45,
       "metadata": {
         "id": "w87WOOct3I_B"
       },
@@ -2827,7 +2847,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 46,
       "metadata": {
         "id": "UBy4y1WP3I_C"
       },
@@ -2843,9 +2863,134 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "XLgUn_mg3I_C"
+        "id": "XLgUn_mg3I_C",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "cd2f9990-37cb-4971-9431-6f8e12a54441"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 0 | Step 008 | Loss: 0.17464987933635712\n",
+            "saved images in 05_images/ for episode 0\n",
+            "Epoch 1 | Step 008 | Loss: 0.15310510993003845\n",
+            "Epoch 2 | Step 008 | Loss: 0.12704750895500183\n",
+            "Epoch 3 | Step 008 | Loss: 0.12108926475048065\n",
+            "Epoch 4 | Step 008 | Loss: 0.10973504185676575\n",
+            "Epoch 5 | Step 008 | Loss: 0.08750655502080917\n",
+            "saved images in 05_images/ for episode 5\n",
+            "Epoch 6 | Step 008 | Loss: 0.12562695145606995\n",
+            "Epoch 7 | Step 008 | Loss: 0.12470006942749023\n",
+            "Epoch 8 | Step 008 | Loss: 0.09631242603063583\n",
+            "Epoch 9 | Step 008 | Loss: 0.11128652095794678\n",
+            "Epoch 10 | Step 008 | Loss: 0.09532211720943451\n",
+            "saved images in 05_images/ for episode 10\n",
+            "Epoch 11 | Step 008 | Loss: 0.13538073003292084\n",
+            "Epoch 12 | Step 008 | Loss: 0.11599497497081757\n",
+            "Epoch 13 | Step 008 | Loss: 0.0857316255569458\n",
+            "Epoch 14 | Step 008 | Loss: 0.12123414129018784\n",
+            "Epoch 15 | Step 008 | Loss: 0.08407353609800339\n",
+            "saved images in 05_images/ for episode 15\n",
+            "Epoch 16 | Step 008 | Loss: 0.1055009514093399\n",
+            "Epoch 17 | Step 008 | Loss: 0.11928462982177734\n",
+            "Epoch 18 | Step 008 | Loss: 0.09686925262212753\n",
+            "Epoch 19 | Step 008 | Loss: 0.10336713492870331\n",
+            "Epoch 20 | Step 008 | Loss: 0.09029385447502136\n",
+            "saved images in 05_images/ for episode 20\n",
+            "Epoch 21 | Step 008 | Loss: 0.10823756456375122\n",
+            "Epoch 22 | Step 008 | Loss: 0.12839893996715546\n",
+            "Epoch 23 | Step 008 | Loss: 0.1056847795844078\n",
+            "Epoch 24 | Step 008 | Loss: 0.11036692559719086\n",
+            "Epoch 25 | Step 008 | Loss: 0.09461744874715805\n",
+            "saved images in 05_images/ for episode 25\n",
+            "Epoch 26 | Step 008 | Loss: 0.09639309346675873\n",
+            "Epoch 27 | Step 008 | Loss: 0.06938833743333817\n",
+            "Epoch 28 | Step 008 | Loss: 0.08773430436849594\n",
+            "Epoch 29 | Step 008 | Loss: 0.09458499401807785\n",
+            "Epoch 30 | Step 008 | Loss: 0.10798133909702301\n",
+            "saved images in 05_images/ for episode 30\n",
+            "Epoch 31 | Step 008 | Loss: 0.1013704240322113\n",
+            "Epoch 32 | Step 008 | Loss: 0.07878194004297256\n",
+            "Epoch 33 | Step 008 | Loss: 0.07194168120622635\n",
+            "Epoch 34 | Step 008 | Loss: 0.07477700710296631\n",
+            "Epoch 35 | Step 008 | Loss: 0.07122259587049484\n",
+            "saved images in 05_images/ for episode 35\n",
+            "Epoch 36 | Step 008 | Loss: 0.06871537119150162\n",
+            "Epoch 37 | Step 008 | Loss: 0.11664801836013794\n",
+            "Epoch 38 | Step 008 | Loss: 0.09933435916900635\n",
+            "Epoch 39 | Step 008 | Loss: 0.09533104300498962\n",
+            "Epoch 40 | Step 008 | Loss: 0.07946757972240448\n",
+            "saved images in 05_images/ for episode 40\n",
+            "Epoch 41 | Step 008 | Loss: 0.0737404078245163\n",
+            "Epoch 42 | Step 008 | Loss: 0.07217536121606827\n",
+            "Epoch 43 | Step 008 | Loss: 0.090934619307518\n",
+            "Epoch 44 | Step 008 | Loss: 0.0740739107131958\n",
+            "Epoch 45 | Step 008 | Loss: 0.07894333451986313\n",
+            "saved images in 05_images/ for episode 45\n",
+            "Epoch 46 | Step 008 | Loss: 0.07093589007854462\n",
+            "Epoch 47 | Step 008 | Loss: 0.08192022889852524\n",
+            "Epoch 48 | Step 008 | Loss: 0.09941881895065308\n",
+            "Epoch 49 | Step 008 | Loss: 0.09612177312374115\n",
+            "Epoch 50 | Step 008 | Loss: 0.09245358407497406\n",
+            "saved images in 05_images/ for episode 50\n",
+            "Epoch 51 | Step 008 | Loss: 0.068276546895504\n",
+            "Epoch 52 | Step 008 | Loss: 0.07425093650817871\n",
+            "Epoch 53 | Step 008 | Loss: 0.0826953649520874\n",
+            "Epoch 54 | Step 008 | Loss: 0.0655292496085167\n",
+            "Epoch 55 | Step 008 | Loss: 0.08879443258047104\n",
+            "saved images in 05_images/ for episode 55\n",
+            "Epoch 56 | Step 008 | Loss: 0.07323566824197769\n",
+            "Epoch 57 | Step 008 | Loss: 0.07485214620828629\n",
+            "Epoch 58 | Step 008 | Loss: 0.06974238157272339\n",
+            "Epoch 59 | Step 008 | Loss: 0.07881961762905121\n",
+            "Epoch 60 | Step 008 | Loss: 0.08096229285001755\n",
+            "saved images in 05_images/ for episode 60\n",
+            "Epoch 61 | Step 008 | Loss: 0.07027563452720642\n",
+            "Epoch 62 | Step 008 | Loss: 0.0766473263502121\n",
+            "Epoch 63 | Step 008 | Loss: 0.09593930095434189\n",
+            "Epoch 64 | Step 008 | Loss: 0.07170362770557404\n",
+            "Epoch 65 | Step 008 | Loss: 0.07441383600234985\n",
+            "saved images in 05_images/ for episode 65\n",
+            "Epoch 66 | Step 008 | Loss: 0.09097316116094589\n",
+            "Epoch 67 | Step 008 | Loss: 0.07040272653102875\n",
+            "Epoch 68 | Step 008 | Loss: 0.06732238829135895\n",
+            "Epoch 69 | Step 008 | Loss: 0.07174444198608398\n",
+            "Epoch 70 | Step 008 | Loss: 0.08414231985807419\n",
+            "saved images in 05_images/ for episode 70\n",
+            "Epoch 71 | Step 008 | Loss: 0.0996086597442627\n",
+            "Epoch 72 | Step 008 | Loss: 0.0848073810338974\n",
+            "Epoch 73 | Step 008 | Loss: 0.0862513929605484\n",
+            "Epoch 74 | Step 008 | Loss: 0.07578073441982269\n",
+            "Epoch 75 | Step 008 | Loss: 0.07661034166812897\n",
+            "saved images in 05_images/ for episode 75\n",
+            "Epoch 76 | Step 008 | Loss: 0.08051147311925888\n",
+            "Epoch 77 | Step 008 | Loss: 0.06841333955526352\n",
+            "Epoch 78 | Step 008 | Loss: 0.07698378711938858\n",
+            "Epoch 79 | Step 008 | Loss: 0.074375681579113\n",
+            "Epoch 80 | Step 008 | Loss: 0.07226844131946564\n",
+            "saved images in 05_images/ for episode 80\n",
+            "Epoch 81 | Step 008 | Loss: 0.08110318332910538\n",
+            "Epoch 82 | Step 008 | Loss: 0.06323359906673431\n",
+            "Epoch 83 | Step 008 | Loss: 0.0666695386171341\n",
+            "Epoch 84 | Step 008 | Loss: 0.07860059291124344\n",
+            "Epoch 85 | Step 008 | Loss: 0.07355073094367981\n",
+            "saved images in 05_images/ for episode 85\n",
+            "Epoch 86 | Step 008 | Loss: 0.06934280693531036\n",
+            "Epoch 87 | Step 008 | Loss: 0.06772086024284363\n",
+            "Epoch 88 | Step 008 | Loss: 0.07988547533750534\n",
+            "Epoch 89 | Step 008 | Loss: 0.07118955254554749\n",
+            "Epoch 90 | Step 008 | Loss: 0.09200157970190048\n",
+            "saved images in 05_images/ for episode 90\n",
+            "Epoch 91 | Step 008 | Loss: 0.05789923667907715\n",
+            "Epoch 92 | Step 008 | Loss: 0.05943157523870468\n",
+            "Epoch 93 | Step 008 | Loss: 0.07598595321178436\n",
+            "Epoch 94 | Step 008 | Loss: 0.06333216279745102\n"
+          ]
+        }
+      ],
       "source": [
         "optimizer = torch.optim.Adam(model.parameters(), lr=lrate)\n",
         "\n",
